Solved Ex3; no interpretation written

--- a/Sols/Ex1/environment.yml
+++ b/Sols/Ex1/environment.yml
@@ -1,12 +1,11 @@
 name: mlph
 channels:
-  - defaults
+  - conda-forge
 dependencies:
-  - jupyter
-  - pip
   - matplotlib
-  - python=3.9
+  - python=3.10
   - numpy
   - scikit-learn
-  - pip:
-    - umap-learn
+  - umap-learn
+  - plotly
+  - scipy
